                    *************************
                    
                    Changes in afex Version 0.27-x
                    Released January 2020

    Significant User Visible Changes and New Features
    
    o   

    Bugfixes
    
    o   mixed(): check_contrasts = TRUE now works when the formula is not a 
        formula (but e.g., a character string).


                    *************************
                    ** afex VERSION 0.26-x **
                    *************************
                    
                    Changes in afex Version 0.26-x
                    Released January 2020
                    
    Significant User Visible Changes and New Features
    
    o   factor_levels argument of afex_plot() now accepts named character vectors
        which allows: 
        (1) renaming only a subset of factor levels (if only a subset of levels 
            is specified) 
        (2) reordering in which order factor levels are shown in the plot (order
            of names within a list element determine order that will be used for
            plotting)

    Bugfixes

    o   msq data set is now part of psychTools and not of psych. 
        Fixes CRAN check issues.


                    *************************
                    ** afex VERSION 0.25-x **
                    *************************
                    
                    Changes in afex Version 0.25-x
                    Released August 2019
                    
    Significant User Visible Changes and New Features
    
    o   Better error messages for ANOVA in some case in which data shows 
        structural problems (e.g., missing design cells).
        
    o   afex_plot() now first draws all graphical elements belonging to a 
        specific factor level, before drawing graphical elements belonging to 
        the next factor level in interaction plots (does not apply to data in 